--- a/overrides/config/worldeditcui.config.json
+++ b/overrides/config/worldeditcui.config.json
@@ -1,6 +1,6 @@
 {
   "debugMode": false,
-  "ignoreUpdates": false,
+  "ignoreUpdates": true,
   "promiscuous": false,
   "clearAllOnKey": false,
   "cuboidGridColor": {
