--- a/overrides/config/fabric/indigo-renderer.properties
+++ b/overrides/config/fabric/indigo-renderer.properties
@@ -1,5 +1,6 @@
 #Indigo properties file
 #Thu Jul 21 12:49:20 CST 2022
+#test
 debug-compare-lighting=auto
 fix-exterior-vertex-lighting=auto
 ambient-occlusion-mode=hybrid
